try fix mobile menu on safari - revert

--- a/frontend/components/Header/Header.module.css
+++ b/frontend/components/Header/Header.module.css
@@ -34,10 +34,7 @@
 
 .backdrop {
     position: fixed;
-    top: env(safe-area-inset-top);
-    left: 0;
-    right: 0;
-    bottom: env(safe-area-inset-bottom);
+    inset: 0;
     background: rgba(0, 0, 0, 0.5);
     z-index: 10;
 }
